# wgew

./: .editorconfig  .gitignore  README.md  analysis.R  analysis_report.Rmd  gages_used.txt  main.py  pyproject.toml  scraper.py  wgew.ipynb
data/: SWRC_DAP_Instrumentation_-6480797226837888374.csv  wgew_analog.csv  wgew_raingage_ids.csv
