[project]
name = "wgew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "duckdb-engine>=0.15.0",
    "jupysql>=0.11.0",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pendulum>=3.0.0",
    "toml>=0.10.2",
]
